manifests/mastodon-digest/mastodon_digest.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon-digest
  namespace: mastodon-digest
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: auth
    name: web
  selector:
    app: mastodon-digest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-digest
  namespace: mastodon-digest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mastodon-digest
  template:
    metadata:
      labels:
        app: mastodon-digest
    spec:
      imagePullSecrets:
        - name: docker-config
      containers:
      - args:
        - --cookie-secure=false
        - --provider=oidc
        - --provider-display-name=Auth0
        - --upstream=http://localhost:80
        - --http-address=$(HOST_IP):8000
        - --redirect-url=https://mastodon-digest.cluster.fun/oauth2/callback
        - --email-domain=marcusnoble.co.uk
        - --pass-basic-auth=false
        - --pass-access-token=false
        - --oidc-issuer-url=https://marcusnoble.eu.auth0.com/
        - --cookie-secret=KDGD6rrK6cBmryyZ4wcJ9xAUNW9AQNFT
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
        name: oauth-proxy
        ports:
        - containerPort: 8000
          protocol: TCP
          name: auth
        resources:
          limits:
            memory: 50Mi
          requests:
            memory: 50Mi

      - name: web
        image: nginx:stable
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        - name: index
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html

      - name: digest
        image: rg.fr-par.scw.cloud/averagemarcus-private/mastodon-digest:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: config
          mountPath: /config.json
          subPath: config.json
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        emptyDir: {}
      - name: config
        configMap:
          name: config
      - name: index
        configMap:
          name: index
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon-digest
  namespace: mastodon-digest
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mastodon-digest.cluster.fun
    secretName: mastodon-digest-ingress
  rules:
  - host: mastodon-digest.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: mastodon-digest
            port:
              number: 80
